--- a/style.css
+++ b/style.css
@@ -185,6 +185,22 @@
     background-color: #00332a;
   }
   
+  /* Social Media */
+  .social-media {
+    margin-top: 2rem;
+  }
+  
+  .social-icon {
+    color: #004d40;
+    font-size: 1.5rem;
+    margin: 0 0.5rem;
+    transition: color 0.3s;
+  }
+  
+  .social-icon:hover {
+    color: #ffab00;
+  }
+  
   /* Footer */
   .footer {
     background-color: #004d40;
